# divvy.up

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ruff.yml
input_test_files/: divvy_test_input.tsv
src/divvy.up/: graph-test.py  main.py  objects.py  test_ruff.py
