[project]
name = "divvy.up"
version = "0.0.0"
date = "2025-01-29"
authors = [
  { name="Laurent Lanteigne", email="laurent.lanteigne@gmail.com" },
  { name="Jan Christopherson", email="janchristopherson@gmail.com" },
]
dependencies = [
]
description = "Software to track divide bills and expenses within a group"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]

[project.scripts]
